# Predicting-Customer-Churn-for-a-Subscription-Based-Service-frontend

backend/: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  SETUP_GUIDE.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  test.bat  test.sh  train.py
backend/api/: __init__.py  main.py  schemas.py
backend/data/raw/: telco_customer_churn.csv
backend/models/: best_model.joblib  feature_importance.json  model_metrics.json  preprocessor.joblib
backend/notebooks/: 01_exploratory_data_analysis.ipynb
backend/src/: __init__.py  data_loader.py  evaluation.py  model_training.py  preprocessing.py
backend/tests/: __init__.py  test_api.py  test_preprocessing.py
frontend/: README.md
frontend/app/: __init__.py  globals.css  layout.tsx  page.tsx  streamlit_app.py
frontend/components/: batch-prediction.tsx  customer-form.tsx  enhanced-prediction-details.tsx  model-metrics.tsx
frontend/hooks/: use-toast.ts
